# carch

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .golangci.yml  CHANGELOG.md  Cargo.toml  Cross.toml  DATE.md  Dockerfile.vhs  INSTALLATION.md  Installation.md  LICENSE  Makefile  PKGBUILD  README.md  SECURITY.md  TODO.md  bacon.toml  binarybuild.sh  carch  carch-gtk.py  carch.desktop  carch.sh  check.sh  clean.sh  cleanup.sh  cliff.toml  committed.toml  core.sh  cxfs  cxfs.c  cxfs.sh  cxfs.sh.x.c  deny.toml  dev.sh  format.py  install.sh  install_arch_deps.sh  lfvs  (+17 more)
.cargo/: config.toml
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  INSTALLATION.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.ko.md  README.md  README.ne.md  README.np.md  README.ru.md  README.zh.md  ROADMAP.md  SECURITY.md  check-ci.sh  ci-status.sh  dependabot.yml  issue_template.md  preview.tape  release-drafter.yml  release.yml  renovate.json  roadmap.md  workers.js
.github/ISSUE_TEMPLATE/: bug-reports.yml  bug_report.md  config.yml  custom.md  custom.yml  feature-reqests.yml  feature_request.md  issue_template.md
.github/scripts/: badge.js
.github/workflows/: android-build.yml  assign.yml  auto-assign.yml  auto-bot.yml  auto-label.yml  auto-prerelease.yml  badge.yml  build-termux-deb.yml  changelog.yml  check-pr.yml  ci.yml  comment.yml  committed.yml  contributors.yml  crate.yml  date-time.yml  deploy.yml  docs-build.yml  docs.yml  format.yml  generate-release-notes.yml  gh-pages.yml  go-check.yml  gocheck.yml  index.mjs  label.yml  message.yml  metrics.yml  mirror.yml  notify.yml  pre-release.yml  preview.yml  release-drafter.yml  release.yml  rpm-build.yml  rpmbuild.yml  rust-build.yml  rust.yml  rustcheck.yml  scripts.yml  (+13 more)
.github/workflows/queries/: commit.graphql
arch/: install.sh
buildtest/: cxfs
carch-cli/: Cargo.toml
carch-cli/src/: args.rs  commands.rs  lib.rs  main.rs  setup.rs  state.rs
carch-core/: Cargo.toml
carch-core/src/: commands.rs  error.rs  lib.rs  version.rs
carch-core/src/modules/: colors.sh  detect-distro.sh  packages.sh  shfmt.sh
carch-core/src/modules/Browser/: Brave.sh  Chromium.sh  Extensions.py  Extensions.sh  Firefox.sh  Floorp.sh  Google-chrome.sh  Helium-browser.sh  Ladybird-browser.sh  Librewolf.sh  Lynx.sh  Opera.sh  Qutebrowser.sh  Thorium-browser.sh  Tor-browser.sh  Ungoogled-chromium.sh  Vivaldi.sh  Zen-browser.sh  desc.toml
carch-core/src/modules/Desktop/: Dwm.sh  Hyprland.sh  Picom.sh  Themes-Icons.sh  Wallpapers.sh  desc.toml
carch-core/src/modules/Development/: Helix.sh  Neovim.sh  Npm.sh
carch-core/src/modules/System/: Audio.py  Audio.sh  AutoLogin-TTY.py  Bluetooth.sh  Chaotic-Aur.py  Fastfetch.sh  Fonts.py  Fonts.sh  Grub.sh  LTS-Kernel.sh  Nitch.sh  Wifi-Blockage.py  Wifi-Blockage.sh  desc.toml
carch-core/src/modules/Terminal/: Bash.sh  Fish.sh  Foot.sh  Termux.sh  Zsh.sh  desc.toml
carch-core/src/modules/Termux-Android/: Termux-Setup.sh  desc.toml
carch-core/src/modules/carch_lib/: __init__.py
carch-core/src/ui/: actions.rs  app.rs  events.rs  render.rs  state.rs  theme.rs
carch-core/src/ui/popups/: description.rs  help.rs  mod.rs  preview.rs  run_script.rs  search.rs  termux_warning.rs  theme_selector.rs
carch-core/src/ui/widgets/: category_list.rs  header.rs  mod.rs  script_list.rs  status_bar.rs
carch-core/tests/: integration.rs
carch-wrapper/: Cargo.toml
carch-wrapper/src/scripts/: carch
cli/: carchcli  carchcli.sh
completions/bash/: carch
completions/fish/: carch.fish
completions/zsh/: _carch
config/: carch.conf  carch.toml
core/: Cargo.toml
core/src/: inner.rs
core/tabs/: tabs.toml
core/tabs/applications-setup/: alacritty.sh  android.sh  browsers.sh  communication.sh  dev.sh  dwm.sh  editing.sh  fastfetch.sh  filemanager.sh  hyprland.sh  i3wm.sh  kitty.sh  lts-kernel.sh  multimedia.sh  music.sh  neovim.sh  picom.sh  recording.sh  rofi.sh  swaywm.sh  tab_data.toml  terminal.sh  texteditor.sh  thunar.sh  tmux.sh
core/tabs/system-setup/: aur.sh  grub.sh  (+5 more)
docs/: contact.md  get-started.md  index.html  index.md  overview-scripts.md  overview.md  package-lock.json  package.json  script.js  style.css
docs/.vitepress/: config.ts
docs/Index/: index.md
docs/acknowledgment/: contributors.md  inspiration.md
docs/getting-started/: introduction.md  preview.md
docs/github/: codeofconduct.md  contributing.md  roadmap.md
docs/installation/: aur.md  cli.md  cmd.md  gtk.md
docs/scripts/: scripts.md
fedora/: carch.spec  install.sh
gtk/: carch-gtk  carch-gtk.py
install/: arch-setup.sh  fedora-setup.sh  run.sh  setup.sh  tui.sh
man/: carch.1
packaging/: build-termux-deb.sh
run/: cleanrun.sh
scripts/: Alacritty-Setup.sh  Alacritty.sh  Aur.sh  Bash.sh  Bun.sh  Dwm Setup.sh  Dwm.sh  Fastfetch.sh  Fish.sh  Font-Setup.sh  Fonts.sh  Grub.sh  Helix.sh  Hyprland Setup.sh  Hyprland.sh  Install Fonts.sh  Install LTS Kernal.sh  Install Packages.sh  Kitty-Setup.sh  Kitty.sh  LTS-Kernal.sh  LTSKernel-Setup.sh  Neovim-Setup.sh  Neovim.sh  NordBackgrounds.sh  Npm.sh  Packages-Setup.sh  Packages.sh  Picom-Setup.sh  Picom.sh  README  README.txt  Rofi.sh  Sddm.sh  Setup Alacritty.sh  Setup Aur.sh  Setup Fastfetch.sh  Setup GRUB.sh  Setup Kitty.sh  Setup Neovim.sh  (+21 more)
scripts/install/: Makefile  go.mod  go.sum  install.go  main.go  uninstall.go  update.go  utils.go
scripts/modules/: packages.sh  shfmt.sh
site/: package.json
site/docs/: about.md  get-started.md  index.md
src/: args.rs  commands.rs  display.rs  error.rs  main.rs  script_list.rs  ui.rs  version.rs
src/modules/: colors.sh  fzf.sh
src/scripts/: carch
src/ui/: actions.rs  app.rs  events.rs  mod.rs  popups.rs  render.rs  state.rs  system_info.rs  theme.rs
tmp/: added.md  changed.md  existing_changelog.md  fixed.md  new_changelog_entry.md  prs.json  removed.md
tools/: module_manager.py
tui/: Cargo.toml
tui/src/: confirmation.rs  filter.rs  floating_text.rs  main.rs  running_command.rs  state.rs
xtask/: Cargo.toml
xtask/src/: args.rs  main.rs
(+193 files in other folders)
