[workspace]
members = ["carch-cli", "carch-core", "xtask"]
resolver = "2"
default-members = ["carch-cli"]

[workspace.package]
version = "5.3.1"
edition = "2024"
documentation = "https://carch.chalisehari.com.np"
homepage = "https://github.com/harilvfs/carch"
readme = "./.github/README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["system", "cli", "rust", "bash"]

[workspace.dependencies]
clap = { version = "4.5.43", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
tempfile = "3.20.0"
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
toml = { version = "0.9.5", default-features = false, features = ["parse", "serde"] }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
