[workspace]
members = ["carch-cli", "carch-core", "xtask"]
resolver = "2"
default-members = ["carch-cli"]

[workspace.package]
version = "5.3.2"
edition = "2024"
documentation = "https://carch.chalisehari.com.np"
homepage = "https://github.com/harilvfs/carch"
readme = "./.github/README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["system", "cli", "rust", "bash"]

[workspace.dependencies]
clap = { version = "4.5.53", features = ["derive"] }
log = "0.4.29"
env_logger = "0.11.8"
tempfile = "3.24.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
toml = { version = "0.9.8", default-features = false, features = ["parse", "serde"] }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
