[workspace]
members = ["carch-cli", "carch-core", "xtask"]
resolver = "2"
default-members = ["carch-cli"]

[workspace.package]
version = "5.4.4"
edition = "2024"
documentation = "https://carch.chalisehari.com.np"
homepage = "https://github.com/harilvfs/carch"
readme = "./.github/README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["system", "cli", "rust", "bash"]

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
log = "0.4.31"
env_logger = "0.11.10"
tempfile = "3.27.0"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.141", default-features = false, features = ["std"] }
toml = { version = "1.1.2", default-features = false, features = ["parse", "serde"] }
libc = "0.2"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
