[package]
name = "carch-cli"
version.workspace = true
description = "A CLI tool to automate Linux system setup"
documentation.workspace = true
repository = "https://github.com/harilvfs/carch/tree/main/carch-cli"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
include = ["src", "Cargo.toml", "../man/carch.1"]

[lib]
name = "carch_cli"
path = "src/lib.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete = "4.6.5"
carch-core = { path = "../carch-core", version = "5.4.1" }
log = { workspace = true }
env_logger = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = { workspace = true }
toml = { workspace = true }

[[bin]]
name = "carch"
path = "src/main.rs"
