[package]
name = "carch-core"
version.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
include = ["src", "Cargo.toml", "../LICENSE", "../.github/README.md"]

[dependencies]
include_dir = "0.7.3"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
syntect = "5.2.0"
reqwest = { workspace = true, default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { workspace = true, default-features = false, features = ["derive"] }
fuzzy-matcher = "0.3.7"
portable-pty = "0.9.0"
tui-term = { version = "0.2.0", default-features = false }
vt100-ctt = "0.16.0"
oneshot = { version = "0.1.8", features = ["std"], default-features = false }
thiserror = "2.0.12"
toml = { version = "0.9.4", default-features = false, features = ["parse", "serde"] }
log = { workspace = true }
env_logger = { workspace = true }
tempfile = { workspace = true }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
