[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
carch-cli = { path = "../carch-cli" }
pico-args = "0.5.0"
xshell = "0.2.0"
anyhow = "1.0.100"
clap = { workspace = true }
clap_complete = "4.5.60"
toml = { workspace = true }
